<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="@drawable/background_rounded_white"
    android:paddingBottom="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_photo"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        app:cardCornerRadius="4dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/thumbnail" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:fontFamily="@font/nunito_semibold"
        android:lines="1"
        android:text="@string/me"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/img_favorite"
        app:layout_constraintStart_toEndOf="@id/card_photo"
        app:layout_constraintTop_toTopOf="@id/card_photo" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/nunito_semibold"
        android:lines="1"
        android:text="@string/android_developer"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/img_favorite"
        app:layout_constraintStart_toStartOf="@id/txt_name"
        app:layout_constraintTop_toBottomOf="@id/txt_name" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="#EEEEEE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_photo" />


    <TextView
        android:id="@+id/img_jobs"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"
        android:drawableStart="@drawable/ic_work_yellow_24dp"
        android:drawablePadding="10dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/jobs"
        app:layout_constraintStart_toStartOf="@id/card_photo"
        app:layout_constraintTop_toBottomOf="@id/line" />


    <TextView
        android:id="@+id/img_rating"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:drawableStart="@drawable/ic_stars_yellow_24dp"
        android:drawablePadding="10dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/rating"
        app:layout_constraintStart_toEndOf="@id/img_jobs"
        app:layout_constraintTop_toTopOf="@id/img_jobs" />

    <ImageView
        android:id="@+id/img_favorite"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background_circle_tosca"
        android:contentDescription="@string/app_name"
        android:padding="8dp"
        android:src="@drawable/ic_heart_white_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>